# PAMSI_projekt3

./: .clang-format  CMakeLists.txt
src/: main.cpp
src/checkers_logic/: lib.h
src/checkers_logic/board/: Board.cpp  Board.h
src/checkers_logic/board/visualiser/: Visualiser.cpp  Visualiser.h
src/checkers_logic/field/: Field.cpp  Field.h
src/checkers_logic/heuristics/: heuristic_function.cpp  heuristic_function.h
src/checkers_logic/heuristics/heuristic_analyser/: HeuristicAnalyser.cpp  HeuristicAnalyser.h
src/checkers_logic/move/: Move.cpp  Move.h
src/checkers_logic/piece/: Piece.cpp  Piece.h
src/checkers_logic/valid_move_finder/: ValidMoveFinder.cpp  ValidMoveFinder.h
src/draughts_algorithm/: lib.h
src/draughts_algorithm/minmax/: MinMax.cpp  MinMax.h
src/game_manager/: GameManager.cpp  GameManager.h  lib.h
src/game_manager/player/: IPlayer.cpp  IPlayer.h
src/game_manager/player/computer_player/: ComputerPlayer.cpp  ComputerPlayer.h
src/game_manager/player/human_player/: HumanPlayer.cpp  HumanPlayer.h
src/game_manager/player/random_player/: RandomPlayer.cpp  RandomPlayer.h
